--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
 
     <!-- Thumbnail image/gif -->
-    <meta property="og:image" content="https://raw.githubusercontent.com/ungesetz/xiliry/main/hanime-anime.gif">
+    <meta property="og:image" content="https://raw.githubusercontent.com/ungesetz/xiliry/main/images.jpg">
     <meta property="og:type" content="video.other">
     
     <!-- Video Link -->
@@ -16,7 +16,7 @@
     <!-- Stole the memes from https://github.com/iwakkrg/iwakkrg.github.io -->
     
     <!-- Redirect -->
-    <meta http-equiv="refresh" content="0; url=www.youtube.com/watch?v=dQw4w9WgXcQ" />
+    <meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=dQw4w9WgXcQ" />
   </head>
   <body>
   </body>
